--- a/addons/hr_fleet/views/employee_views.xml
+++ b/addons/hr_fleet/views/employee_views.xml
@@ -4,7 +4,7 @@
     <record id="view_employee_form" model="ir.ui.view">
         <field name="name">hr.employee.form.inherit.hr.fleet</field>
         <field name="model">hr.employee</field>
-        <field name="inherit_id" ref="hr.view_employee_form" />
+        <field name="inherit_id" ref="hr.view_employee_form_officer" />
         <field name="priority" eval="60" />
         <field name="arch" type="xml">
             <div name="button_box" position="inside">
