--- a/addons/hr_timesheet/views/hr_views.xml
+++ b/addons/hr_timesheet/views/hr_views.xml
@@ -30,7 +30,7 @@
     <record id="hr_employee_view_form_inherit_timesheet" model="ir.ui.view">
         <field name="name">hr.employee.form.timesheet</field>
         <field name="model">hr.employee</field>
-        <field name="inherit_id" ref="hr.view_employee_form"/>
+        <field name="inherit_id" ref="hr.view_employee_form_officer"/>
         <field name="priority" eval="40"/>
         <field name="arch" type="xml">
             <group name="application_group" position="attributes">
