--- a/addons/hr_work_entry/views/hr_employee_views.xml
+++ b/addons/hr_work_entry/views/hr_employee_views.xml
@@ -7,7 +7,7 @@
         <field name="priority" eval="90"/>
         <field name="arch" type="xml">
             <div name="button_box" position="inside">
-                <button type="object" class="oe_stat_button" id="open_work_entries"
+                <button type="object" class="oe_stat_button" id="open_work_entries" groups="hr.group_hr_user"
                     icon="fa-calendar" name="action_open_work_entries" string="Work Entries">
                 </button>
             </div>
