--- a/addons/mail/static/src/components/emoji_list/emoji_list.scss
+++ b/addons/mail/static/src/components/emoji_list/emoji_list.scss
@@ -2,7 +2,7 @@
 // Layout
 // ------------------------------------------------------------------
 
-.o_EmojiList {
+.o_EmojiPickerView {
     // Could be replaced by "d-grid" class after migration to BS5
     display: grid;
     grid-template-columns: repeat(9, 1fr);
