--- a/addons/web/static/src/legacy/scss/views.scss
+++ b/addons/web/static/src/legacy/scss/views.scss
@@ -3,7 +3,7 @@
  * all renderers. For field default rules, see the fields.scss file.
  */
 
-.o_legacy_kanban_view {
+.o_debug .o_legacy_kanban_view {
     border-top: 2px solid red;
 }
 
