[REF] website: multirange input
This commit improve the design and simplify the implementation.
Popovers have been removed and the overall integration with boostrap is
increased allowing customization with the default boostrap variables.

Variables for (multi-)range input have been exposed at "theme-level"
allowing to customize these components when creating a new theme.

task-2907955

--- a/addons/website/static/src/scss/bootstrap_overridden.scss
+++ b/addons/website/static/src/scss/bootstrap_overridden.scss
@@ -147,6 +147,11 @@ $input-transition: o-website-value('input-transition' , #{background-color .05s 
 $form-check-input-border: o-website-value('form-check-input-border', 1px solid o-color('400')) !default;
 $form-check-input-border-radius: o-website-value('form-check-input-border-radius', 0) !default;
 
+$form-range-track-height: o-website-value('form-range-track-height', .1rem) !default;
+$form-range-thumb-border: o-website-value('form-range-thumb-border', 1px solid o-color('primary')) !default;
+$form-range-thumb-bg: o-website-value('form-range-thumb-bg', $body-bg) !default;
+$form-range-thumb-active-bg: o-website-value('form-range-thumb-active-bg', o-color('primary')) !default;
+
 // Badge
 $badge-padding-y: 0.25em !default;
 $badge-padding-x: 0.4em !default;
