--- a/addons/website/static/src/scss/primary_variables.scss
+++ b/addons/website/static/src/scss/primary_variables.scss
@@ -1998,6 +1998,11 @@ $o-base-website-values-palette: (
     'form-check-input-border': null, // Default to BS
     'form-check-input-border-radius': null, // Default to BS
 
+    'form-range-track-height': null, // Default to BS
+    'form-range-thumb-border': null, // Default to BS
+    'form-range-thumb-bg': null, // Default to BS
+    'form-range-thumb-active-bg': null, // Default to BS
+
     // A key from the $o-theme-font-configs map (null = default to the first key)
     'font': null,
     'headings-font': null,
