[IMP] mail: rename ComposerSuggestion to ComposerSuggestionView
Part of task-2741982

Part-of: odoo/odoo#95341

--- a/addons/mail/static/src/components/composer_suggestion_view/composer_suggestion_view.scss
+++ b/addons/mail/static/src/components/composer_suggestion_view/composer_suggestion_view.scss
@@ -2,6 +2,6 @@
 // Layout
 // ------------------------------------------------------------------
 
-.o_ComposerSuggestion:active {
+.o_ComposerSuggestionView:active {
     background-color: $gray-300;
 }
